Refactor global variables so that the are not global anymore

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,172 +5,14 @@ root_dirs:
   maintenance: /home/pi/maintenance
   rss: /home/pi/rss
 
-networks:
-  host:
-    v4:
-      subnet: 192.168.1.0/24
-      netaddress: 192.168.1.0
-      netmask: 255.255.255.0
-      netmask_short: 24
-      gateway: 192.168.1.1
-    v6:
-      subnet: 2a02:120b:2c06:57d0::/64
-      netmask: 64
-      gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
-
-  pihole:
-    v4:
-      subnet: 172.16.1.0/24
-      netaddress: 172.16.1.0
-      netmask: 255.255.255.0
-      gateway: 172.16.1.1
-    v6:
-      enable: "{{ host.supports_v6 }}"
-      subnet: 2a02:120b:2c06:57df::/64
-      netmask: 64
-      gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
-    name: pihole_net
-
-  vpn:
-    v4:
-      subnet: 172.16.2.0/24
-      netaddress: 172.16.2.0
-      netmask: 255.255.255.0
-      gateway: 172.16.2.1
-    v6:
-      enable: "{{ host.supports_v6 }}"
-      subnet: 2a02:120b:2c06:57de::/64
-      netmask: 64
-      gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
-    name: vpn_net
-
-  unbound:
-    v4:
-      subnet: 172.16.3.0/24
-      netaddress: 172.16.3.0
-      netmask: 255.255.255.0
-      gateway: 172.16.3.1
-    name: unbound_net
-
-volumes:
-  pihole:
-    main:
-      name: main_config
-      local_folder: "{{ root_dirs.pihole }}/etc-pihole"
-      mount: /etc/pihole/
-    dnsmasq:
-      name: dnsmasq_config
-      local_folder: "{{ root_dirs.pihole }}/etc-dnsmasq.d"
-      mount: /etc/dnsmasq.d/
-  vpn:
-    config:
-      name: ovpn_config
-      local_folder: "{{ root_dirs.pihole }}/etc-openvpn"
-      mount: /etc/openvpn
-  unbound:
-    main:
-      name: unbound_config
-      local_folder: "{{ root_dirs.pihole }}/etc-unbound"
-      mount: /opt/unbound/etc/unbound
-  duplicati:
-    config:
-      name: duplicati_config
-      local_folder: "{{ root_dirs.maintenance }}/duplicati_config"
-      mount: /config
-    backup_target:
-      name: duplicati_backup_target
-      local_folder: "/home/{{ user }}"
-      mount: "/source"
-  portainer:
-    data:
-      name: portainer_data
-      local_folder: "{{ root_dirs.maintenance }}/portainer_config"
-      mount: /data
-
-pihole:
-  user: pihole
-  name: pihole
-  ipv4: 172.16.1.20
-  ipv6: 2a02:120b:2c06:57df::20
-  use_host_net: yes
-  network: "{{ networks.pihole }}"
-  volumes: "{{ volumes.pihole }}"
-
-openvpn:
-  name: openvpn
-  user: "{{ user }}"
-  ipv4: 172.16.2.20
-  ipv6: 2a02:120b:2c06:57de::20
-  use_host_net: yes
-  autoupdate: no
-  network: "{{ networks.vpn }}"
-  volumes: "{{ volumes.vpn }}"
-  tun_device_name: tun0
-
-  conf:
-    dns: vpn.realmar.net
-
-    ca_cert_bits: 4096
-    tls_cipher: TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384
-    cipher: AES-256-GCM
-    auth: SHA512
-
-    server:
-      file: openvpn.conf
-      v4:
-        subnet: 192.168.255.0/24
-        netaddress: 192.168.255.0
-        netmask: 255.255.255.0
-      v6:
-        netaddress: "2a02:120b:2c06:57dc::"
-        netmask: 64
-    client:
-      only_dns_over_vpn: yes
-
-netdata:
-  name: netdata
-  user: netdata
-
-unbound:
-  name: unbound
-  user: pi
-  ipv4: 172.16.3.20
-  port: 25353
-  use_host_net: no
-  network: "{{ networks.unbound }}"
-  volumes: "{{ volumes.unbound }}"
-
-containers:
-  - "{{ pihole }}"
-  - "{{ openvpn }}"
-  - "{{ unbound }}"
-
-stacks:
-  maintenance:
-    volumes:
-      - "{{ volumes.duplicati.config }}"
-      - "{{ volumes.duplicati.backup_target }}"
-      - "{{ volumes.portainer.data }}"
-    local_folders:
-      - "{{ volumes.duplicati.config.local_folder }}"
-      - "{{ volumes.portainer.data.local_folder }}"
-
-__flat_volumes: |
-  {% set vols = [] %}
-  {% for c in containers %}
-    {% for k, vol in c.volumes.items() %}
-      {% set x = vols.append({'container': c, 'volume': vol}) %}
-    {% endfor %}
-  {% endfor %}
-  {{ vols|to_json }}
-flat_volumes: "{{ __flat_volumes|from_json }}"
-
-__exclude_autoupdate_containers: |
-  {% set exclude = [] %}
-  {% for c in containers %}
-    {% if c.autoupdate is defined and c.autoupdate == false %}
-      {% set x = exclude.append(c) %}
-    {% endif %}
-  {% endfor %}
-  {{ exclude|to_json }}
-containers_autoupdate_disabled: "{{ __exclude_autoupdate_containers|from_json }}"
+host_net:
+  v4:
+    subnet: 192.168.1.0/24
+    netaddress: 192.168.1.0
+    netmask: 255.255.255.0
+    netmask_short: 24
+    gateway: 192.168.1.1
+  v6:
+    subnet: 2a02:120b:2c06:57d0::/64
+    netmask: 64
+    gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
