--- a/roles/base_system/vars/main.yml
+++ b/roles/base_system/vars/main.yml
@@ -1,2 +1,3 @@
-unattended_upgrades:
-  mail: anastassios.martakos@outlook.com
+base_system:
+  unattended_upgrades:
+    mail: anastassios.martakos@outlook.com
