--- a/roles/fileserver/templates/custom_smb.conf
+++ b/roles/fileserver/templates/custom_smb.conf
@@ -1,9 +1,9 @@
 [global]
-    guest account = {{ share_user }}
+    guest account = {{ fileserver_share_user }}
 
-[{{ share_name }}]
+[{{ fileserver_share_name }}]
     comment = Realmar Samba Share
-    path = {{ share_path }}
+    path = {{ fileserver_share_path }}
     browsable = yes
     writable = yes
     public = yes
