--- a/roles/pihole/templates/openvpn/openvpn.conf
+++ b/roles/pihole/templates/openvpn/openvpn.conf
@@ -1,7 +1,7 @@
 {% import "pihole_ipam.jinja2" as pihole_ipam with context %}
 
 server {{ openvpn.conf.server.v4.netaddress }} {{ openvpn.conf.server.v4.netmask }}
-{% if networks.vpn.v6.enable %}
+{% if openvpn.networks.v6.enable %}
 server-ipv6 {{ openvpn.conf.server.v6.netaddress }}/{{ openvpn.conf.server.v6.netmask }}
 tun-ipv6
 {% endif %}
@@ -40,32 +40,32 @@ comp-lzo no
 
 ### Route Configurations Below
 {% if pihole.use_host_net %}
-push "route {{ networks.host.v4.netaddress }} {{ networks.host.v4.netmask }}"
+push "route {{ host_net.v4.netaddress }} {{ host_net.v4.netmask }}"
 {% else %}
-push "route {{ networks.pihole.v4.netaddress }} {{ networks.pihole.v4.netmask }}"
+push "route {{ pihole.networks.v4.netaddress }} {{ pihole.networks.v4.netmask }}"
 {% endif %}
 {% if openvpn.use_host_net == false %}
-push "route {{ networks.vpn.v4.netaddress }} {{ networks.vpn.v4.netmask }}"
+push "route {{ openvpn.networks.v4.netaddress }} {{ openvpn.networks.v4.netmask }}"
 {% endif %}
 
-{% if networks.vpn.v6.enable %}
+{% if openvpn.networks.v6.enable %}
 {%   if pihole.use_host_net %}
-push "route-ipv6 {{ networks.host.v6.subnet }}"
+push "route-ipv6 {{ host_net.v6.subnet }}"
 {%   else %}
-push "route-ipv6 {{ networks.pihole.v6.subnet }}"
+push "route-ipv6 {{ pihole.networks.v6.subnet }}"
 {%   endif %}
 {% if openvpn.use_host_net == false %}
-push "route-ipv6 {{ networks.vpn.v6.subnet }}"
+push "route-ipv6 {{ openvpn.networks.v6.subnet }}"
 {% endif %}
 {% endif %}
 
 ### Push Configurations Below
 # push "block-outside-dns"
 push "dhcp-option DNS {{ pihole_ipam.ipam.ipv4 }}"
-{% if networks.vpn.v6.enable %}
+{% if openvpn.networks.v6.enable %}
 push "dhcp-option DNS {{ pihole_ipam.ipam.ipv6 }}"
 {% endif %}
 push "comp-lzo no"
-{% if networks.vpn.v6.enable %}
+{% if openvpn.networks.v6.enable %}
 push "tun-ipv6"
 {% endif %}
