--- a/roles/pihole/templates/unbound/a-records.conf
+++ b/roles/pihole/templates/unbound/a-records.conf
@@ -9,7 +9,7 @@
        local-data: "pihole.home. A {{ pihole_ipam.ipam.ipv4 }}"
        local-data-ptr: "{{ pihole_ipam.ipam.ipv4 }} pihole.home."
 
-{% if networks.pihole.v6.enable %}
+{% if pihole.networks.v6.enable %}
        local-data: "pihole.home. AAAA {{ pihole_ipam.ipam.ipv6 }}"
        local-data-ptr: "{{ pihole_ipam.ipam.ipv6 }} pihole.home."
 {% endif %}
