--- a/roles/fileserver/vars/main.yml
+++ b/roles/fileserver/vars/main.yml
@@ -1,3 +1,3 @@
-share_user: smbrealmar
-share_name: data
-share_path: /home/{{ share_user }}/data
+fileserver_share_user: smbrealmar
+fileserver_share_name: data
+fileserver_share_path: /home/smbrealmar/data
