--- a/roles/maintenance/templates/docker_update.yml
+++ b/roles/maintenance/templates/docker_update.yml
@@ -9,7 +9,7 @@ ouroboros:
     - INTERVAL=3600
     - LOG_LEVEL=info
     - SELF_UPDATE=true
-    - IGNORE={% for c in containers_autoupdate_disabled %}{{ c.name }}{% endfor %}
+    - IGNORE=openvpn
 
   restart: always
   volumes:
