--- a/roles/pihole/tasks/openvpn/main.yml
+++ b/roles/pihole/tasks/openvpn/main.yml
@@ -5,7 +5,7 @@
 
 - name: Start and enable haveged service
   service:
-    name: haveged 
+    name: haveged
     state: started
     enabled: yes
 
@@ -14,24 +14,24 @@
 
 - name: Create VPN config folder
   file:
-    path: "{{ volumes.vpn.config }}"
+    path: "{{ openvpn.volumes.config }}"
     state: directory
     owner: "{{ user }}"
     group: "{{ user }}"
 
 - name: Check if OpenVPN config exists
   stat:
-    path: "{{ volumes.vpn.config.local_folder }}/openvpn.conf"
+    path: "{{ openvpn.volumes.config.local_folder }}/openvpn.conf"
   register: ovpn_conf
 
 - name: Generate OpenVPN config
-  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_genconfig -n {{ host.ipv4 if pihole.use_host_net else pihole.ipv4 }} -u udp://{{ openvpn.conf.dns }} -T {{ openvpn.conf.tls_cipher }} -C '{{ openvpn.conf.cipher }}' -a '{{ openvpn.conf.auth }}'"
+  shell: "docker run -v {{ openvpn.volumes.config.local_folder }}:{{ openvpn.volumes.config.mount }} --rm kylemanna/openvpn ovpn_genconfig -n {{ host.ipv4 if pihole.use_host_net else pihole.ipv4 }} -u udp://{{ openvpn.conf.dns }} -T {{ openvpn.conf.tls_cipher }} -C '{{ openvpn.conf.cipher }}' -a '{{ openvpn.conf.auth }}'"
   when: ovpn_conf.stat.exists == false
 
 - name: Copy OpenVPN server conf
   template:
     src: openvpn/openvpn.conf
-    dest: "{{ volumes.vpn.config.local_folder }}"
+    dest: "{{ openvpn.volumes.config.local_folder }}"
     owner: "{{ openvpn.user }}"
     group: "{{ user }}"
     mode: 0644
