--- a/roles/pihole/tasks/openvpn/route_lan.yml
+++ b/roles/pihole/tasks/openvpn/route_lan.yml
@@ -1,7 +1,7 @@
 - name: Copy vpn up script
   template:
     src: openvpn/route_lan.py
-    dest: "{{ volumes.vpn.config.local_folder }}/up-route_lan.py"
+    dest: "{{ openvpn.volumes.config.local_folder }}/up-route_lan.py"
     owner: "{{ user }}"
     group: "{{ user }}"
     mode: 0755
@@ -11,7 +11,7 @@
 - name: Copy vpn down script
   template:
     src: openvpn/route_lan.py
-    dest: "{{ volumes.vpn.config.local_folder }}/down-route_lan.py"
+    dest: "{{ openvpn.volumes.config.local_folder }}/down-route_lan.py"
     owner: "{{ user }}"
     group: "{{ user }}"
     mode: 0755
