--- a/roles/pihole/templates/pihole/10-custom-dns.conf
+++ b/roles/pihole/templates/pihole/10-custom-dns.conf
@@ -3,6 +3,6 @@
 
 {% import "pihole_ipam.jinja2" as pihole_ipam with context %}
 # address=/pihole.home/{{ pihole_ipam.ipam.ipv4 }}
-{% if networks.pihole.v6.enable %}
+{% if pihole.networks.v6.enable %}
 # address=/pihole.home/{{ pihole_ipam.ipam.ipv6 }}
 {% endif %}
