--- a/roles/maintenance/templates/netdata.yml
+++ b/roles/maintenance/templates/netdata.yml
@@ -1,11 +1,12 @@
 {%- import 'docker_volumes.jinja2' as dv with context -%}
+{% import 'docker_network.jinja2' as dn with context -%}
+{% import "docker_misc.jinja2" as dm with context -%}
 
 netdata:
   container_name: {{ netdata.name }}
   image: netdata/netdata:latest
   hostname: pihole.home
-  ports:
-    - 19999:19999
+  {{ dn.map_ports([ (19999, 19999) ])|indent(width = 2) }}
   cap_add:
     - SYS_PTRACE
   security_opt:
@@ -16,4 +17,4 @@ netdata:
     - /proc:/host/proc:ro
     - /sys:/host/sys:ro
     {{ dv.datetime_mapping()|indent(width = 4) }}
-  restart: always
+  {{ dm.restart_policy() }}
