--- a/roles/pihole/templates/docker-compose.yml
+++ b/roles/pihole/templates/docker-compose.yml
@@ -34,15 +34,14 @@ version: '3'
 {% import "password_gen.jinja2" as gen with context -%}
 {% import 'docker_volumes.jinja2' as dv with context -%}
 {% import 'docker_network.jinja2' as dn with context -%}
+{% import "docker_misc.jinja2" as dm with context -%}
 
 services:
   openvpn:
     container_name: {{ openvpn.name }}
     image: kylemanna/openvpn
 {% if openvpn.use_host_net == false %}
-    ports:
-      - "1194:1194/udp"
-      - "1194:1194/tcp"
+    {{ dn.map_ports([ (1194, 1194, "udp"), (1194, 1194, "tcp") ])|indent(width = 4) }}
 {% endif %}
     environment:
     # VIRTUAL_PORT=${VIRTUAL_PORT_OPENVPN}
@@ -55,7 +54,7 @@ services:
     # LOCAL_NETWORK=192.168.0.0/24
       OPENVPN_OPTS: --inactive 3600 --ping 10 --ping-exit 60 -–log-driver json-file --log-opt max-size=10m
     {{ dv.volumes_section_complete([ openvpn.volumes.config ])|indent(width = 4) }}
-    restart: always
+    {{ dm.restart_policy() }}
 {% if openvpn.use_host_net %}
     network_mode: host
 {% else %}
@@ -90,12 +89,11 @@ services:
     depends_on:
       - openvpn
 {% if pihole.use_host_net == false %}
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp"
-      - "67:67/udp"
-      - "80:80/tcp"
-      - "443:443/tcp"
+    {{ dn.map_ports([
+      (53, 53, "udp"), (53, 53, "tcp"),
+      (67, 67, "udp"),
+      (80, 80),
+      (443, 443) ])|indent(width = 4) }}
 {% endif %}
     environment:
 {#                 We need to escape $-sign with two $$-signs #}
@@ -121,7 +119,7 @@ services:
         pihole.volumes.dnsmasq
       ]
     )|indent(width = 4) }}
-    restart: always
+    {{ dm.restart_policy() }}
 {% if pihole.use_host_net %}
     network_mode: host
 {% else %}
@@ -146,7 +144,7 @@ services:
   unbound:
     container_name: {{ unbound.name }}
     # Note: make sure the image supports arm (the image on the latest tag does not)
-    image: {{ 'mvance/unbound-rpi:latest' if 'development' not in group_names else 'mvance/unbound:latest' }}
+    image: {{ 'mvance/unbound-rpi:latest' if not is_dev else 'mvance/unbound:latest' }}
 {% set vols = [
   unbound.volumes.main
 ] %}
@@ -154,7 +152,7 @@ services:
     networks:
       {{ unbound.networks.name }}:
         ipv4_address: {{ unbound.ipv4 }}
-    restart: always
+    {{ dm.restart_policy() }}
 {% set nets = [ unbound.networks ] %}
 {% if pihole.use_host_net == false %}
 {{   nets.append(pihole.networks) }}
