Add traefik reverse proxy

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -4,6 +4,7 @@ root_dirs:
   pihole: /home/pi/pihole
   maintenance: /home/pi/maintenance
   rss: /home/pi/rss
+  proxy: /home/pi/proxy
 
 host_net:
   v4:
@@ -16,3 +17,6 @@ host_net:
     subnet: 2a02:120b:2c06:57d0::/64
     netmask: 64
     gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
+
+discovery_network:
+  name: discovery
