--- a/01_deployment_pihole.yml
+++ b/01_deployment_pihole.yml
@@ -8,6 +8,7 @@
       tags: always
 
   roles:
+    - { role: proxy, tags: proxy }
     - { role: pihole, tags: pihole }
     - { role: maintenance, tags: maintenance }
     - { role: fileserver, tags: fileserver }
@@ -25,6 +26,7 @@
         - "{{ root_dirs.pihole }}"
         - "{{ root_dirs.maintenance }}"
         - "{{ root_dirs.rss }}"
+        - "{{ root_dirs.proxy }}"
       register: cli_result
       changed_when:
         - '"up-to-date" not in cli_result.stderr'
