--- a/roles/maintenance/templates/docker-compose.yml
+++ b/roles/maintenance/templates/docker-compose.yml
@@ -1,5 +1,6 @@
-{% import "utils.jinja2" as utils with context -%}
+{% import 'utils.jinja2' as utils with context -%}
 {% import 'docker_volumes.jinja2' as dv with context -%}
+{% import 'docker_network.jinja2' as dn with context -%}
 
 {% set services = [
   'docker_update.yml',
@@ -13,6 +14,8 @@ services:
 {% for service in services %}
   {{ utils.include(service)|indent(width = 2) }}
 {% endfor %}
+
+{{ dn.discovery_networks_declaration() }}
 
 {% set vols = [
   duplicati.volumes.config,
